--- a/Lenguaje_de_marcas/mangak/mangas/one-piece/front.html
+++ b/Lenguaje_de_marcas/mangak/mangas/one-piece/front.html
@@ -31,7 +31,11 @@
             <!-- Barra de busqueda -->
             <div id="search">
                 <input id="searchBar" type="search" placeholder="Search...">
-            </div>
+                <label for="searchBar">
+                    <img src="../../images/iconos/lupa.png" alt="">
+                </label>
+
+            </a>
         </nav>
 
         <!-- LATERAL DISPLAY -->
@@ -75,8 +79,107 @@
             
             <!-- Sinopsis -->
             <article id="sinopsis">
-                <p>He transmigrado al mundo del webtoon BL donde dejé mi único comentario rencoroso. Además de eso, me convertí en la hermana menor adoptada de mi personaje favorito: el obsesivo protagonista masculino que luego se arrepiente de sus acciones, pero al final muere junto con el duque. Entonces, me volví decidida. Desde que transmigré a este mundo, no puedo quedarme quieta y ver morir a mi personaje favorito.  Además, tampoco quiero morir.  Por eso, autor, ¡tendré que cambiar ligeramente las etiquetas y el final de este webtoon!  De la tragedia al final feliz. "Hermano, por favor sonríe así frente a los demás también".  Le dije a Lucian, quien no sonríe ni un poco frente a los demás. “…” ¿Fue esa solicitud demasiado inesperada? Lucian me miró con una expresión peculiar. "Si haces eso, te daré un regalo". Dije eso porque quería ayudarlo en todo lo que pudiera. Me miró un momento y dudó antes de</p>
+                <p>Hace veintidós años, el legendario pirata, Gold Roger fue ejecutado. Sus últimas palabras fueron que su tesoro conocido como "One Piece" estaba escondido en algún lugar de la Grand Line. Esto dio inicio a la Era de los Piratas. Ahora, veinte dos años después, Monkey D. Luffy de diecisiete años desea encontrar el One Piece y convertirse en el Rey de los Piratas.</p>
             </article>
+
+            <!-- Etiquetas -->
+            <!-- 
+                <a><i class="fas fa-tags"></i> Acción</a>
+                <a><i class="fas fa-tags"></i> Aventura</a> 
+                <a><i class="fas fa-tags"></i> Comedia</a> 
+                <a><i class="fas fa-tags"></i> Drama</a> 
+                <a><i class="fas fa-tags"></i> Recuentos de la vida</a>  
+                <a><i class="fas fa-tags"></i> Ecchi</a> 
+                <a><i class="fas fa-tags"></i> Fantasia</a> 
+                <a><i class="fas fa-tags"></i> Magia</a> 
+                <a><i class="fas fa-tags"></i> Sobrenatural</a> 
+                <a><i class="fas fa-tags"></i> Horror</a> 
+                <a><i class="fas fa-tags"></i> Misterio</a> 
+                <a><i class="fas fa-tags"></i> Psicológico</a> 
+                <a><i class="fas fa-tags"></i> Romance</a> 
+                <a><i class="fas fa-tags"></i> Ciencia Ficción</a>  
+                <a><i class="fas fa-tags"></i> Thriller</a> 
+                <a><i class="fas fa-tags"></i> Deporte</a> 
+                <a><i class="fas fa-tags"></i> Harem</a> 
+                <a><i class="fas fa-tags"></i> Mecha</a> 
+                <a><i class="fas fa-tags"></i> Supervivencia</a> 
+                <a><i class="fas fa-tags"></i> Reencarnación</a> 
+                <a><i class="fas fa-tags"></i> Gore</a> 
+                <a><i class="fas fa-tags"></i> Apocalíptico</a> 
+                <a><i class="fas fa-tags"></i> Tragedia</a> 
+                <a><i class="fas fa-tags"></i> Vida Escolar</a>  
+                <a><i class="fas fa-tags"></i> Historia</a> 
+                <a><i class="fas fa-tags"></i> Militar</a> 
+                <a><i class="fas fa-tags"></i> Policiaco</a> 
+                <a><i class="fas fa-tags"></i> Crimen</a> 
+                <a><i class="fas fa-tags"></i> Superpoderes</a> 
+                <a><i class="fas fa-tags"></i> Vampiros</a> 
+                <a><i class="fas fa-tags"></i> Artes Marciales</a>  
+                <a><i class="fas fa-tags"></i> Samurái</a> 
+                <a><i class="fas fa-tags"></i> Realidad Virtual</a>  
+                <a><i class="fas fa-tags"></i> Ciberpunk</a> 
+                <a><i class="fas fa-tags"></i> Musica</a> 
+                <a><i class="fas fa-tags"></i> Parodia</a> 
+                <a><i class="fas fa-tags"></i> Animación</a> 
+                <a><i class="fas fa-tags"></i> Demonios</a> 
+                <a><i class="fas fa-tags"></i> Familia</a> 
+                <a><i class="fas fa-tags"></i> Extranjero</a> 
+                <a><i class="fas fa-tags"></i> Niños</a> 
+                <a><i class="fas fa-tags"></i> Realidad</a> 
+                <a><i class="fas fa-tags"></i> Telenovela</a> 
+                <a><i class="fas fa-tags"></i> Guerra</a> 
+                <a><i class="fas fa-tags"></i> Oeste</a> 
+                <a><i class="fas fa-tags"></i> Traps</a>
+            -->
+            <article id="etiquetas">
+                <a><i class="fas fa-tags"></i> Acción</a>
+                <a><i class="fas fa-tags"></i> Aventura</a> 
+                <a><i class="fas fa-tags"></i> Comedia</a> 
+                <a><i class="fas fa-tags"></i> Drama</a> 
+                <a><i class="fas fa-tags"></i> Recuentos de la vida</a>  
+            </article>
+        </section>
+
+        <section id="capitulos">            
+            <article><a href="cap1.html">Capítulo 1</a></article>
+            <article><a href="cap2.html">Capítulo 2</a></article>
+            <article><a href="cap3.html">Capítulo 3</a></article>
+            <article><a href="cap4.html">Capítulo 4</a></article>
+            <article><a href="cap5.html">Capítulo 5</a></article>
+            <article><a href="cap6.html">Capítulo 6</a></article>
+            <article><a href="cap7.html">Capítulo 7</a></article>
+            <article><a href="cap8.html">Capítulo 8</a></article>
+            <article><a href="cap9.html">Capítulo 9</a></article>
+            <article><a href="cap10.html">Capítulo 10</a></article>
+            <article><a href="cap11.html">Capítulo 11</a></article>
+            <article><a href="cap12.html">Capítulo 12</a></article>
+            <article><a href="cap13.html">Capítulo 13</a></article>
+            <article><a href="cap14.html">Capítulo 14</a></article>
+            <article><a href="cap15.html">Capítulo 15</a></article>
+            <article><a href="cap16.html">Capítulo 16</a></article>
+            <article><a href="cap17.html">Capítulo 17</a></article>
+            <article><a href="cap18.html">Capítulo 18</a></article>
+            <article><a href="cap19.html">Capítulo 19</a></article>
+            <article><a href="cap20.html">Capítulo 20</a></article>
+            <article><a href="cap21.html">Capítulo 21</a></article>
+            <article><a href="cap22.html">Capítulo 22</a></article>
+            <article><a href="cap23.html">Capítulo 23</a></article>
+            <article><a href="cap24.html">Capítulo 24</a></article>
+            <article><a href="cap25.html">Capítulo 25</a></article>
+            <article><a href="cap26.html">Capítulo 26</a></article>
+            <article><a href="cap27.html">Capítulo 27</a></article>
+            <article><a href="cap28.html">Capítulo 28</a></article>
+            <article><a href="cap29.html">Capítulo 29</a></article>
+            <article><a href="cap30.html">Capítulo 30</a></article>
+            <article><a href="cap31.html">Capítulo 31</a></article>
+            <article><a href="cap32.html">Capítulo 32</a></article>
+            <article><a href="cap33.html">Capítulo 33</a></article>
+            <article><a href="cap34.html">Capítulo 34</a></article>
+            <article><a href="cap35.html">Capítulo 35</a></article>
+            <article><a href="cap36.html">Capítulo 36</a></article>
+            <article><a href="cap37.html">Capítulo 37</a></article>
+            <article><a href="cap38.html">Capítulo 38</a></article>
+           
         </section>
 
     </main>
