--- a/Lenguaje_de_marcas/mangak/mangas/one-piece/front.html
+++ b/Lenguaje_de_marcas/mangak/mangas/one-piece/front.html
@@ -84,59 +84,62 @@
 
             <!-- Etiquetas -->
             <!-- 
-                <a><i class="fas fa-tags"></i> Acción</a>
-                <a><i class="fas fa-tags"></i> Aventura</a> 
-                <a><i class="fas fa-tags"></i> Comedia</a> 
-                <a><i class="fas fa-tags"></i> Drama</a> 
-                <a><i class="fas fa-tags"></i> Recuentos de la vida</a>  
-                <a><i class="fas fa-tags"></i> Ecchi</a> 
-                <a><i class="fas fa-tags"></i> Fantasia</a> 
-                <a><i class="fas fa-tags"></i> Magia</a> 
-                <a><i class="fas fa-tags"></i> Sobrenatural</a> 
-                <a><i class="fas fa-tags"></i> Horror</a> 
-                <a><i class="fas fa-tags"></i> Misterio</a> 
-                <a><i class="fas fa-tags"></i> Psicológico</a> 
-                <a><i class="fas fa-tags"></i> Romance</a> 
-                <a><i class="fas fa-tags"></i> Ciencia Ficción</a>  
-                <a><i class="fas fa-tags"></i> Thriller</a> 
-                <a><i class="fas fa-tags"></i> Deporte</a> 
-                <a><i class="fas fa-tags"></i> Harem</a> 
-                <a><i class="fas fa-tags"></i> Mecha</a> 
-                <a><i class="fas fa-tags"></i> Supervivencia</a> 
-                <a><i class="fas fa-tags"></i> Reencarnación</a> 
-                <a><i class="fas fa-tags"></i> Gore</a> 
-                <a><i class="fas fa-tags"></i> Apocalíptico</a> 
-                <a><i class="fas fa-tags"></i> Tragedia</a> 
-                <a><i class="fas fa-tags"></i> Vida Escolar</a>  
-                <a><i class="fas fa-tags"></i> Historia</a> 
-                <a><i class="fas fa-tags"></i> Militar</a> 
-                <a><i class="fas fa-tags"></i> Policiaco</a> 
-                <a><i class="fas fa-tags"></i> Crimen</a> 
-                <a><i class="fas fa-tags"></i> Superpoderes</a> 
-                <a><i class="fas fa-tags"></i> Vampiros</a> 
-                <a><i class="fas fa-tags"></i> Artes Marciales</a>  
-                <a><i class="fas fa-tags"></i> Samurái</a> 
-                <a><i class="fas fa-tags"></i> Realidad Virtual</a>  
-                <a><i class="fas fa-tags"></i> Ciberpunk</a> 
-                <a><i class="fas fa-tags"></i> Musica</a> 
-                <a><i class="fas fa-tags"></i> Parodia</a> 
-                <a><i class="fas fa-tags"></i> Animación</a> 
-                <a><i class="fas fa-tags"></i> Demonios</a> 
-                <a><i class="fas fa-tags"></i> Familia</a> 
-                <a><i class="fas fa-tags"></i> Extranjero</a> 
-                <a><i class="fas fa-tags"></i> Niños</a> 
-                <a><i class="fas fa-tags"></i> Realidad</a> 
-                <a><i class="fas fa-tags"></i> Telenovela</a> 
-                <a><i class="fas fa-tags"></i> Guerra</a> 
-                <a><i class="fas fa-tags"></i> Oeste</a> 
-                <a><i class="fas fa-tags"></i> Traps</a>
+                <a href=""><i class="fas fa-tags"></i> Acción</a>
+                <a href=""><i class="fas fa-tags"></i> Aventura</a> 
+                <a href=""><i class="fas fa-tags"></i> Comedia</a> 
+                <a href=""><i class="fas fa-tags"></i> Drama</a> 
+                <a href=""><i class="fas fa-tags"></i> Recuentos de la vida</a>  
+                <a href=""><i class="fas fa-tags"></i> Ecchi</a> 
+                <a href=""><i class="fas fa-tags"></i> Fantasia</a> 
+                <a href=""><i class="fas fa-tags"></i> Magia</a> 
+                <a href=""><i class="fas fa-tags"></i> Sobrenatural</a> 
+                <a href=""><i class="fas fa-tags"></i> Horror</a> 
+                <a href=""><i class="fas fa-tags"></i> Misterio</a> 
+                <a href=""><i class="fas fa-tags"></i> Psicológico</a> 
+                <a href=""><i class="fas fa-tags"></i> Romance</a> 
+                <a href=""><i class="fas fa-tags"></i> Ciencia Ficción</a>  
+                <a href=""><i class="fas fa-tags"></i> Thriller</a> 
+                <a href=""><i class="fas fa-tags"></i> Deporte</a> 
+                <a href=""><i class="fas fa-tags"></i> Harem</a> 
+                <a href=""><i class="fas fa-tags"></i> Mecha</a> 
+                <a href=""><i class="fas fa-tags"></i> Supervivencia</a> 
+                <a href=""><i class="fas fa-tags"></i> Reencarnación</a> 
+                <a href=""><i class="fas fa-tags"></i> Gore</a> 
+                <a href=""><i class="fas fa-tags"></i> Apocalíptico</a> 
+                <a href=""><i class="fas fa-tags"></i> Tragedia</a> 
+                <a href=""><i class="fas fa-tags"></i> Vida Escolar</a>  
+                <a href=""><i class="fas fa-tags"></i> Historia</a> 
+                <a href=""><i class="fas fa-tags"></i> Militar</a> 
+                <a href=""><i class="fas fa-tags"></i> Policiaco</a> 
+                <a href=""><i class="fas fa-tags"></i> Crimen</a> 
+                <a href=""><i class="fas fa-tags"></i> Superpoderes</a> 
+                <a href=""><i class="fas fa-tags"></i> Vampiros</a> 
+                <a href=""><i class="fas fa-tags"></i> Artes Marciales</a>  
+                <a href=""><i class="fas fa-tags"></i> Samurái</a> 
+                <a href=""><i class="fas fa-tags"></i> Realidad Virtual</a>  
+                <a href=""><i class="fas fa-tags"></i> Ciberpunk</a> 
+                <a href=""><i class="fas fa-tags"></i> Musica</a> 
+                <a href=""><i class="fas fa-tags"></i> Parodia</a> 
+                <a href=""><i class="fas fa-tags"></i> Animación</a> 
+                <a href=""><i class="fas fa-tags"></i> Demonios</a> 
+                <a href=""><i class="fas fa-tags"></i> Familia</a> 
+                <a href=""><i class="fas fa-tags"></i> Extranjero</a> 
+                <a href=""><i class="fas fa-tags"></i> Niños</a> 
+                <a href=""><i class="fas fa-tags"></i> Realidad</a> 
+                <a href=""><i class="fas fa-tags"></i> Telenovela</a> 
+                <a href=""><i class="fas fa-tags"></i> Guerra</a> 
+                <a href=""><i class="fas fa-tags"></i> Oeste</a> 
+                <a href=""><i class="fas fa-tags"></i> Traps</a>
             -->
+
             <article id="etiquetas">
-                <a><i class="fas fa-tags"></i> Acción</a>
-                <a><i class="fas fa-tags"></i> Aventura</a> 
-                <a><i class="fas fa-tags"></i> Comedia</a> 
-                <a><i class="fas fa-tags"></i> Drama</a> 
-                <a><i class="fas fa-tags"></i> Recuentos de la vida</a>  
+                <a href=""><i class="fas fa-tags"></i> Acción</a>
+                <a href=""><i class="fas fa-tags"></i> Aventura</a> 
+                <a href=""><i class="fas fa-tags"></i> Comedia</a> 
+                <a href=""><i class="fas fa-tags"></i> Drama</a> 
+                <a href=""><i class="fas fa-tags"></i> Fantasia</a>
+                <a href=""><i class="fas fa-tags"></i> Artes Marciales</a>  
+
             </article>
         </section>
 
