--- a/Lenguaje_de_marcas/mangak/index.html
+++ b/Lenguaje_de_marcas/mangak/index.html
@@ -474,7 +474,7 @@
             <article id="contenido">
                 <h4>Contenidos</h4>
                 <p>
-                    MangaK no realiza las traducciones aquí realizadas y solo es un repositorio con visor propio para que se puedan leer de forma comoda las obras.
+                    MangaK no realiza las traducciones aquí publicadas y solo es un repositorio con visor propio para que se puedan leer de forma comoda las obras.
                 </p>
             </article>
             <!-- copyright -->
