--- a/Lenguaje_de_marcas/searchEngine.html
+++ b/Lenguaje_de_marcas/searchEngine.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Duck.🦆🐤🐤🐤🐤</title>
+    <title>◈◈GEOMETRICA◈◈</title>
 </head>
 
 <style>
@@ -12,7 +12,7 @@
     body{
         text-align: center;
         margin-top: 16%;
-        background-image: url('https://img.freepik.com/premium-vector/seamless-pattern-rubber-bathing-cartoon_71328-1355.jpg?w=2000');
+        background-image: url('https://static.vecteezy.com/system/resources/previews/001/255/564/original/abstract-geometric-triangle-seamless-pattern-vector.jpg');
         background-size: 400px;
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     }
@@ -21,7 +21,7 @@
         float: left;
         margin-left: 45%;
         width: 200px;
-        background-color: rgb(255, 239, 160);
+        background-color: rgb(30, 164, 168);
         border-radius: 10px;
         padding: 20px 0 20px 0;
 
@@ -34,7 +34,6 @@
     <form method="get" action="https://www.google.com/search" target="_blank">
         <input class="entrada" type="search" name="q" placeholder="Término a buscar" required=""><br>
         <b>Tipos de archivos:</b><br>
-        blink 
             <select class="select" name="as_filetype">
                <option label="Todos" value="" selected="selected"></option>
                <option value="ppt">PowerPoint</option>
@@ -46,8 +45,15 @@
                <option label="Todos" value="" selected="selected"></option>
                <option value="norfipc.com">NorfiPC.com</option>
                <option value="es.wikipedia.org/">Wikipedia</option>
-               <option value="github.com">Github</option>
+               <option value="kemono.party/artists">Kemono</option>
             </select><br>
+            <!-- <b>Sitios web:</b><br> 
+            <select class="select" name="as_sitesearch">
+               <option label="Todos" value="" selected="selected"></option>
+               <option value="norfipc.com">NorfiPC.com</option>
+               <option value="es.wikipedia.org/">Wikipedia</option>
+               <option value="github.com">Github</option>
+            </select><br> -->
         <input type="hidden" name="num" value="50"> 
         <input class="botb" type="submit" value="Buscar">    
         </form>
