--- a/Lenguaje_de_marcas/mangak/mangas/one-piece/front.html
+++ b/Lenguaje_de_marcas/mangak/mangas/one-piece/front.html
@@ -72,15 +72,14 @@
 
     <!-- Main -->
     <main>
-        <section>
             <!-- portada manga -->
-            <article id="portada">
+            <article class="portada">
                 <h2>ONE-PIECE</h2>
                 <img src="../../images/portadas/one-piece.jpg" alt="">
             </article>
 
             <!-- Sinopsis -->
-            <article id="sinopsis">
+            <article class="sinopsis">
                 <h2>Sinopsis</h2>
                 <p>Hace veintidós años, el legendario pirata, Gold Roger fue ejecutado. Sus últimas palabras fueron que
                     su tesoro conocido como "One Piece" estaba escondido en algún lugar de la Grand Line. Esto dio
@@ -139,7 +138,7 @@
                 <a href=""><i class="fas fa-tags"></i> Traps</a>
             -->
 
-            <article id="etiquetas">
+            <article class="etiquetas">
                 <h2>Etiquetas</h2>
                 <a href=""><i class="fas fa-tags"></i> Acción</a>
                 <a href=""><i class="fas fa-tags"></i> Aventura</a>
@@ -149,9 +148,9 @@
                 <a href=""><i class="fas fa-tags"></i> Artes Marciales</a>
 
             </article>
-        </section>
 
-        <section id="capitulos">
+        
+        <section class="capitulos">
             <!-- <article><a href="cap1.html">Capítulo 1</a><div></div></article>            -->
             <article><a href="cap1.html">Capítulo 1</a></article>
             <article><a href="cap2.html">Capítulo 2</a></article>
@@ -186,8 +185,60 @@
 
         </section>
 
-        <section id="compartir">
-            <a href=""></a>
+        <section class="userZone">
+            <article class="userManagement">
+                <div class="leido">
+                    <i class="element-header-bar-element-icon far fa-check-circle fa-2x fa-fw"></i>
+                    <p>Leido</p>
+                </div>
+
+                <div class="pendiente">
+                    <i class="element-header-bar-element-icon far fa-clock fa-2x fa-fw"></i>
+                    <p>Pendiente</p>
+                </div>
+
+                <div class="siguiendo">
+                    <i class="element-header-bar-element-icon fa-play-circle fa-2x fa-fw far"></i>
+                    <p>Siguiendo</p>
+                </div>
+
+                <div class="favorito">
+                    <i class="element-header-bar-element-icon far fa-heart fa-2x fa-fw"></i>
+                    <p>Favorito</p>
+                </div>
+
+                <div class="loTengo">
+                    <i class="element-header-bar-element-icon far fa-check-square fa-2x fa-fw"></i>
+                    <p>Lo Tengo</p>
+                </div>
+
+                <div class="abandonado">
+                    <i class="element-header-bar-element-icon far fa-thumbs-down fa-2x fa-fw"></i>
+                    <p>Abandonado</p>
+                </div>
+            </article>
+
+            <article class="userSocial">
+                <h2>Compartir manga</h2>
+                <a href="#"><img src="../../images/iconos/facebookIcon.png" alt=""></a>
+                <a href="#"><img src="../../images/iconos/twitterIcon.png" alt=""></a>
+                <a href="#"><img src="../../images/iconos/InstagramIcon.png" alt=""></a>
+                <a href="#"><img src="../../images/iconos/discrodIcon.png" alt=""></a>
+            </article>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
         </section>
     </main>
