--- a/Lenguaje_de_marcas/mangak/mangas/one-piece/front.html
+++ b/Lenguaje_de_marcas/mangak/mangas/one-piece/front.html
@@ -220,27 +220,15 @@
 
             <article class="userSocial">
                 <h2>Compartir manga</h2>
-                <a href="#"><img src="../../images/iconos/facebookIcon.png" alt=""></a>
-                <a href="#"><img src="../../images/iconos/twitterIcon.png" alt=""></a>
-                <a href="#"><img src="../../images/iconos/InstagramIcon.png" alt=""></a>
-                <a href="#"><img src="../../images/iconos/discrodIcon.png" alt=""></a>
+                <a href="https://es-es.facebook.com/"><img src="../../images/iconos/facebook.png" alt=""></a>
+                <a href="https://twitter.com/home?lang=es"><img src="../../images/iconos/twitter.png" alt=""></a>
+                <a href="https://www.instagram.com/"><img src="../../images/iconos/instagram.png" alt=""></a>
+                <a href="https://www.youtube.com/"><img src="../../images/iconos/youtube.png" alt=""></a>
+                <a href="https://www.reddit.com/"><img src="../../images/iconos/reddit.png" alt=""></a>
+                <a href="https://www.pinterest.es/"><img src="../../images/iconos/pinterest.png" alt=""></a>
             </article>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
         </section>
+        
     </main>
 
     <!-- Footer pag sim -->
