--- a/Lenguaje_de_marcas/mangak/index.html
+++ b/Lenguaje_de_marcas/mangak/index.html
@@ -278,7 +278,7 @@
             
             <article id="shojo">
                 <h4>Berserk</h4>
-                <a href="">
+                <a href="mangas/berserk/front.html">
                     <img id="PORTADAS" src="images/portadas/berserk.jpg" alt="">
                 </a>
             </article>
@@ -299,7 +299,7 @@
 
             <article id="seinen">
                 <h4>Iron Ladies</h4>
-                <a href="">
+                <a href="mangas/iron-ladies/front.html">
                     <img id="PORTADAS" src="images/portadas/iron-ladies.jpg" alt="">
                 </a>
             </article>
