--- a/Lenguaje_de_marcas/mangak/index.html
+++ b/Lenguaje_de_marcas/mangak/index.html
@@ -74,6 +74,14 @@
                 <li><a href="#">Biblioteca</a></li>
                 <li><a href="#">Privacy Policy</a></li>
                 <li><a href="#">User Setings</a></li>
+                <section id="opcionMovil">
+                    <li><a href="#">Populares</a></li>
+                    <li><a href="#">Géneros</a></li>
+                    <li><a href="#">Nuevos</a></li>
+                    <li><a href="#">Noticias </a></li>
+                </section>
+
+                
                 <li id="logout"><a href="#">Logout</a></li>
             </ul>
         </nav>
@@ -188,7 +196,6 @@
                 <li>
                     <a id="textoTop"   href="">Top 3</a>
                     <a href = "">
-            <img src="" alt="">
                         <img id="top3" src="images/portadas/solo-leveling.jpg" alt="">
                     </a>
                 </li>
