--- a/Lenguaje_de_marcas/mangak/mangas/one-piece/cap2.html
+++ b/Lenguaje_de_marcas/mangak/mangas/one-piece/cap2.html
@@ -71,7 +71,7 @@
 
     </header>
 
-
+  
     <!-- Main -->
     <main>
 
@@ -82,31 +82,29 @@
             <a class="arribaPag" href="#arriba"><i class="fa-solid fa-angle-up"></i></a>
         </section>
 
-        <img class="pagina" id="arriba" src="https://es12.movietop.cc/es_manga/50/114/309097/6693a7aacb8a2e74c6f5fe91bc39864b.webp?acc=vjd8dwfojBnP6kAtEYmKtg&exp=1676945858" border="0">
-        <img class="pagina" src="https://es6.movietop.cc/es_manga/50/114/309097/dc4ff0eb47dc4499c160ae22d8413116.webp?acc=NMKiidcQMwDXL8D_cP1m8w&exp=1676945858" border="0">
-        <img class="pagina" src="https://es2.movietop.cc/es_manga/50/114/309097/d3a8b7e791870f66db86d84de72c7dad.webp?acc=Oe4gpGqcXgYu0LyXrk3gYQ&exp=1676945858" border="0">
-        <img class="pagina" src="https://es12.movietop.cc/es_manga/50/114/309097/3001ef257407d5a371a96dcd947c7d93.webp?acc=NixagY_v892qA8jGdFS4jg&exp=1676945858" border="0">
-        <img class="pagina" src="https://es2.movietop.cc/es_manga/50/114/309097/2315bbb5fcfea3f27447cc12be090a6f.webp?acc=EQRpHIRuElGGNboLd09uvg&exp=1676945858" border="0">
-        <img class="pagina" src="https://es7.movietop.cc/es_manga/50/114/309097/5acc291fb65d349ece286e28dd63d580.webp?acc=krccOJgBuIKKCpuyk3Uq4A&exp=1676945858" border="0">
-        <img class="pagina" src="https://es13.movietop.cc/es_manga/50/114/309097/d46f83609e738e9bd504eb671eca3f45.webp?acc=wdBsSzuNY5nki2zqhEwL8A&exp=1676945858" border="0">
-        <img class="pagina" src="https://es11.movietop.cc/es_manga/50/114/309097/431349af291517e9f3630dacacd727e3.webp?acc=O9otuKFHruiriz9hUSLBYw&exp=1676945858" border="0">
-        <img class="pagina" src="https://es6.movietop.cc/es_manga/50/114/309097/9baf82afda5f7d560678a1cc313189ba.webp?acc=elQBzRq0QRS1m2Dpd-8moQ&exp=1676945858" border="0">
-        <img class="pagina" src="https://es6.movietop.cc/es_manga/50/114/309097/0683cb9c246e61ab7ea3e28fc50693ea.webp?acc=fj-bDB_F5yVtriJoLTL8EA&exp=1676945858" border="0">
-
-        <img class="pagina" src="https://es9.movietop.cc/es_manga/50/114/309097/ba9d98e8e54041173ea4f3640ed79cac.webp?acc=bc9IHbJGS9Bk1ebnOjVzlA&exp=1676946245" border="0">
-        <img class="pagina" src="https://es5.movietop.cc/es_manga/50/114/309097/b6693cd29e780a2f56a0d941917e8af6.webp?acc=W3MRt1gJlkrMsdCVwzvskA&exp=1676946245" border="0">
-        <img class="pagina" src="https://es15.movietop.cc/es_manga/50/114/309097/0df520c6780a27245f7c0763c1295d87.webp?acc=baxZ4yldqbudtEOMw5DyVQ&exp=1676946245" border="0">
-        <img class="pagina" src="https://es8.movietop.cc/es_manga/50/114/309097/2eca337b20ca8d8a80df64d82747d7fb.webp?acc=-4dXP7l__jTmDwKdUSqF3Q&exp=1676946245" border="0">
-        <img class="pagina" src="https://es5.movietop.cc/es_manga/50/114/309097/c3daba8ba04565423e12eb8cb6237b46.webp?acc=mYIFHVO89PsBWI_lq0Zkaw&exp=1676946245" border="0">
-        <img class="pagina" src="https://es10.movietop.cc/es_manga/50/114/309097/9f31aa0b674ca2c515ecadd7fd077bc6.webp?acc=GZuhW0XjOnuthVhHsAq_uA&exp=1676946245" border="0">
-        <img class="pagina" src="https://es10.movietop.cc/es_manga/50/114/309097/d95a2fa315683f22cfa4713558f64dfe.webp?acc=OzvaQQ0Ik2OhKNaaKEcnJw&exp=1676946245" border="0">
-        <img class="pagina" src="https://es2.movietop.cc/es_manga/50/114/309097/e525781f66c234e405f65072196ff862.webp?acc=-LVZ9Yj6Umu_7I6p5TCDIw&exp=1676946245" border="0">
-        <img class="pagina" src="https://es9.movietop.cc/es_manga/50/114/309097/5d798e4d52300434b2c1a41162162020.webp?acc=t25vHnuNDzl4vdxqEoKCMA&exp=1676946245" border="0">
-        <img class="pagina" src="https://es12.movietop.cc/es_manga/50/114/309097/72cfd8e9bc7fa949d593d1d28855245a.webp?acc=Oq4nKSwcARmK1IeAsGP5vQ&exp=1676946245" border="0">
-
-        <img class="pagina" src="https://es14.movietop.cc/es_manga/50/114/309097/c18961bb80e7f3191e559a807c285346.webp?acc=d_xZcVMqj1UOGI6O4A3h7g&exp=1676946264" border="0">
-        <img class="pagina" src="https://es9.movietop.cc/es_manga/50/114/309097/fa522ede9e820bba27b3656fa5209cdf.webp?acc=Y7x6FUsnwzrsqwj2w27O7w&exp=1676946264" border="0">
-        <img class="pagina" src="https://es9.movietop.cc/es_manga/50/114/309097/7148b43162c89352020755c27d3a7361.webp?acc=iweIN846w46h32AG_O4bsQ&exp=1676946264" border="0">
+        <img class="pagina" id="arriba" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/01.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/02.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/03.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/04.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/05.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/06.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/07.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/08.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/09.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/10.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/11.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/12.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/13.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/14.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/15.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/16.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/17.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/18.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/19.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/20.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/21.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/22.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/23.jpg" alt="">
 
     </main>
 
