--- a/Lenguaje_de_marcas/mangak/mangas/one-piece/cap20.html
+++ b/Lenguaje_de_marcas/mangak/mangas/one-piece/cap20.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../../styles/fontawesome-free-6.3.0-web/css/all.css">
     <!-- icons-source -->
     <!-- https://fontawesome.com/icons/tag?s=solid&f=classic -->
-    <title>Capitulo 4</title>
+    <title>Capitulo 20</title>
 </head>
 
 <body>
@@ -76,32 +76,32 @@
     <main>
 
         <section class="control">
-            <a class="adelante" href="cap3.html"><i class="fa-solid fa-backward"></i></a>
+            <a class="adelante" href="cap19.html"><i class="fa-solid fa-backward"></i></a>
             <a class="menu" href="front.html"><i class="fa-solid fa-house"></i></a>
-            <a class="atras" href="cap5.html"><i class="fa-solid fa-forward"></i></a>
+            <!-- <a class="atras" href="cap21.html"><i class="fa-solid fa-forward"></i></a> -->
             <a class="arribaPag" href="#arriba"><i class="fa-solid fa-angle-up"></i></a>
         </section>
 
-        <img class="pagina" id="arriba" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/01.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/02.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/03.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/04.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/05.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/06.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/07.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/08.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/09.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/10.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/11.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/12.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/13.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/14.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/15.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/16.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/17.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/18.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/19.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/20.jpg" alt="">
+        <img class="pagina" id="arriba" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/01.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/02.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/03.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/04.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/05.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/06.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/07.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/08.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/09.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/10.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/11.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/12.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/13.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/14.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/15.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/16.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/17.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/18.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/19.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/20.jpg" alt="">
     </main>
 
     <!-- Footer pag sim -->
